// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests react/TextField Affix 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
}

.c1 {
  display: grid;
  grid-template-columns: auto 1fr auto;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c3 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c3::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c3:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        /home/john/
      </div>
      <input
        aria-labelledby="test-id"
        className="c3"
        id="test-id"
        onChange={[Function]}
        type="text"
      />
      <span
        className="c4"
      >
        .png
      </span>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests react/TextField AssistiveText 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c2 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c2::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c2:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::placeholder {
  color: var(--charcoal-text3);
}

.c3 {
  font-size: 14px;
  line-height: 22px;
  margin: 0;
  color: var(--charcoal-text2);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c1"
    >
      <input
        aria-describedby="test-id"
        aria-labelledby="test-id"
        className="c2"
        id="test-id"
        onChange={[Function]}
        type="text"
      />
    </div>
    <p
      className="c3"
      id="test-id"
    >
      説明が入ります
    </p>
  </div>
</div>
`;

exports[`Storybook Tests react/TextField Default 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c2 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c2::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c2:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span>
          <button
            className="charcoal-clickable"
          >
            Text Link
          </button>
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <input
        aria-invalid={false}
        aria-labelledby="test-id"
        className="c2"
        id="test-id"
        onChange={[Function]}
        placeholder="TextField"
        readOnly={false}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests react/TextField Disabled 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  opacity: 0.32;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c2 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c2::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c2:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      aria-disabled={true}
      className="c1"
    >
      <input
        aria-labelledby="test-id"
        className="c2"
        id="test-id"
        onChange={[Function]}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests react/TextField Invalid 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
  box-shadow: 0 0 0 4px rgba(255,43,0,0.32);
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(255,43,0,0.32);
}

.c2 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c2::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c2:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::placeholder {
  color: var(--charcoal-text3);
}

.c3 {
  font-size: 14px;
  line-height: 22px;
  margin: 0;
  color: var(--charcoal-assertive);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c1"
    >
      <input
        aria-describedby="test-id"
        aria-invalid={true}
        aria-labelledby="test-id"
        className="c2"
        id="test-id"
        onChange={[Function]}
        type="text"
      />
    </div>
    <p
      className="c3"
      id="test-id"
    >
      エラーメッセージ
    </p>
  </div>
</div>
`;

exports[`Storybook Tests react/TextField Label 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c2 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c2::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c2:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root"
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c1"
    >
      <input
        aria-labelledby="test-id"
        className="c2"
        id="test-id"
        onChange={[Function]}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests react/TextField Number 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c2 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c2::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c2:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c1"
    >
      <input
        aria-labelledby="test-id"
        className="c2"
        id="test-id"
        onChange={[Function]}
        onWheel={[Function]}
        type="number"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests react/TextField Placeholder 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c2 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c2::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c2:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c1"
    >
      <input
        aria-labelledby="test-id"
        className="c2"
        id="test-id"
        onChange={[Function]}
        placeholder="Placeholder"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests react/TextField Prefix 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
}

.c1 {
  display: grid;
  grid-template-columns: auto 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c4::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c4::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c4:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c4::placeholder {
  color: var(--charcoal-text3);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #858585;
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <pixiv-icon
            name="16/Search"
          />
        </div>
      </div>
      <input
        aria-labelledby="test-id"
        className="c4"
        id="test-id"
        onChange={[Function]}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests react/TextField ReadOnly 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c2 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c2::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c2:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c1"
    >
      <input
        aria-labelledby="test-id"
        className="c2"
        id="test-id"
        onChange={[Function]}
        readOnly={true}
        type="text"
        value="読み取り専用"
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests react/TextField RequiredText 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c2 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c2::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c2:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root"
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-required-text"
      >
        *必須
      </div>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c1"
    >
      <input
        aria-labelledby="test-id"
        className="c2"
        id="test-id"
        onChange={[Function]}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests react/TextField ShowCount 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr auto;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c2 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c2::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c2:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::placeholder {
  color: var(--charcoal-text3);
}

.c4 {
  line-height: 22px;
  font-size: 14px;
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c1"
    >
      <input
        aria-labelledby="test-id"
        className="c2"
        id="test-id"
        maxLength={100}
        onChange={[Function]}
        type="text"
      />
      <span
        className="c3"
      >
        <span
          className="c4"
        >
          0/100
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests react/TextField SubLabel 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c2 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c2::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c2:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c2::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span>
          <button
            className="charcoal-clickable"
          >
            Text Link
          </button>
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <input
        aria-labelledby="test-id"
        className="c2"
        id="test-id"
        onChange={[Function]}
        type="text"
      />
    </div>
  </div>
</div>
`;
